# learning-ai

./: .env.example  Dockerfile  main.py  pyproject.toml
clients/: __init__.py  base.py  ollama_client.py  vertex_client.py
middleware/: auth.py
models/: schemas.py
prompts/: lesson_prompts.py  quiz_prompts.py
routers/: coaching.py  generate.py
tests/: test_clients.py  test_coaching.py  test_generate.py  test_health_and_auth.py  test_lesson_prompts.py
